// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : Blog : Byline renders correctly 1`] = `
<div
  className="byline"
>
  <div
    className="headshotContainer"
  >
    <img
      alt=""
      src="//images.ctfassets.net/arandomfile"
    />
  </div>
  <span
    className="bylineText"
  >
    <span
      className="author"
    >
      By 
      <a
        className="authorInner"
        href="https://twitter.com/test"
      >
        test name
      </a>
    </span>
    <span
      className="date"
    >
      Aug 1 2020
    </span>
  </span>
</div>
`;

exports[`Components : Pages : Blog : Byline renders correctly 2`] = `
<div
  className="byline"
>
  <span
    className="bylineText"
  >
    <span
      className="author"
    >
      By 
      <span
        className="authorInner"
      >
        test name
      </span>
    </span>
    <span
      className="date"
    >
      published on 
      Aug 1 2020
    </span>
    <span
      className="date"
    >
      updated at 
      2:22 pm
       
      <abbr
        aria-label="Eastern Time"
        title="Eastern Time"
      >
        ET
      </abbr>
       on 
      July 13, 2020
    </span>
  </span>
</div>
`;
